--- a/index.html
+++ b/index.html
@@ -14,20 +14,6 @@
     <!-- <div class="container-fluid"> -->
         <!-- Header -->
         <header class="header-bg d-flex justify-content-between align-items-center">
-            <!-- <div class="row row-bg align-items-center">
-                <div class="col-6">
-                    <h4 class="text-white">START BOOTSTRAP</h4>
-                </div>
-                <div class="col-6">
-                    <ul class="d-flex justify-content-between align-items-center text-white dsplay">
-                        <li>PORTFOLIO</li>
-                        <li>ABOUT</li>
-                        <li>CONTACT</li>
-                    </ul>
-                </div>
-                
-            </div> -->
-
             <div class="text-white px-2">
                 <a class="" href="">START BOOTSTRAP</a>
             </div>
@@ -52,16 +38,12 @@
                     <div class="col-4 offset-4 jumbo-img">img</div>
 
                     <div class="col-8 offset-2 ">
-                        <h1 class="text-white">START BOOTSTRAP</h1>
+                        <h1 class="text-white text-center">START BOOTSTRAP</h1>
                     </div>
 
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-2 offset-3 text-white"><hr class=""></div>
-                            <div class="col-2 text-white">
-                                <i class="fa-solid fa-star text-white"></i>
-                            </div>
-                            <div class="col-2 text-white"><hr></div>
+                    <div class="col-12 position-relative ">
+                        <div class="star-container text-center">
+                           <i class="fa-solid fa-star text-white text-center"></i>
                         </div>
                     </div>
                     <div class="col-12">
