aggiunto color alle cards

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                            <i class="fa-solid fa-star text-white text-center"></i>
                         </div>
                     </div>
+
                     <div class="col-12">
                         <ul class="row dsplay">
                             <li class="col-4 text-white">col-4</li>
@@ -57,16 +58,23 @@
 
             </div>
             <!-- /Jumbotron -->
+
+            <!-- Cards-section -->
             <section class="cards">
                 <div class="container-sm">
-                    <h3>PORTFOLIO</h3>
-                    <div class="row row-col-6">
-                        <div class="col-12 card"></div>
-                        <div class="col-12 card"></div>
-                        <div class="col-12 card"></div>
-                        <div class="col-12 card"></div>
-                        <div class="col-12 card"></div>
-                        <div class="col-12 card"></div>
+                    <h3 class="text-center mt-4">PORTFOLIO</h3>
+                    <div class="col-12 position-relative ">
+                        <div class="star-container-dark text-center">
+                           <i class="fa-solid fa-star text-black text-center"></i>
+                        </div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                        <div class="col card red"></div>
+                        <div class="col card watergreen"></div>
+                        <div class="col card black"></div>
+                        <div class="col card lightblue"></div>
+                        <div class="col card blue"></div>
+                        <div class="col card pink"></div>
 
                 </div>
                 </div>
