--- a/index.html
+++ b/index.html
@@ -61,26 +61,44 @@
 
             <!-- Cards-section -->
             <section class="cards">
-                <div class="container-sm">
+                <div class="container-sm container-md container-lg">
                     <h3 class="text-center mt-4">PORTFOLIO</h3>
                     <div class="col-12 position-relative ">
                         <div class="star-container-dark text-center">
                            <i class="fa-solid fa-star text-black text-center"></i>
                         </div>
                     </div>
-                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    <div class="row g-3 row-cols-1 row-cols-md-2 row-cols-lg-3">
                         <div class="col card red"></div>
                         <div class="col card watergreen"></div>
                         <div class="col card black"></div>
                         <div class="col card lightblue"></div>
                         <div class="col card blue"></div>
                         <div class="col card pink"></div>
+                    </div>
+                </div>
+            </section>
+        <!-- /Cards-section -->
+            <section class="about m-3">
+                <h3 class="text-white text-center">ABOUT</h3>
+                <div class="col-12 position-relative ">
+                    <div class="star-container text-center">
+                       <i class="fa-solid fa-star text-white text-center"></i>
+                    </div>
+                </div>
+                <div class="container-sm container-md">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi reprehenderit quisquam dolores maiores repudiandae, ad, aut officiis esse dignissimos ut nihil cumque sit sed voluptatem deleniti, culpa rerum voluptatum minus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis et accusantium alias ab consequuntur, asperiores est laudantium, aliquid sunt, eum eaque saepe? Ut corrupti fugit unde placeat distinctio qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam veniam aspernatur, enim excepturi pariatur architecto eveniet odit error facilis obcaecati cupiditate quas aliquid, doloremque tempore doloribus minus! Expedita, tempore perferendis!</div>
+                        <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis et accusantium alias ab consequuntur, asperiores est laudantium, aliquid sunt, eum eaque saepe? Ut corrupti fugit unde placeat distinctio qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quod, sit modi odit dolor doloribus, ad autem accusantium assumenda totam cum ducimus quos quae minima sed velit. Cumque, id dolorem? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro mollitia sed perspiciatis maiores, autem similique nam ratione deleniti veritatis molestias officia, repudiandae, perferendis alias ad neque reprehenderit aperiam non nemo. </div>
+                    </div>
+                </div>
+                <div class="button m-4 text-center">
+                    <a class="p-2 border border-white rounded" href="">Download</a>
 
                 </div>
-                </div>
+
 
             </section>
-            cards
         </Main>
         <!-- /Main -->
         <!-- Footer -->
