--- a/index.html
+++ b/index.html
@@ -94,15 +94,53 @@
                 </div>
                 <div class="button m-4 text-center">
                     <a class="p-2 border border-white rounded" href="">Download</a>
-
                 </div>
-
-
             </section>
+            <!-- /Cards-section -->
+
+            <!-- Contact-me-section -->
+            <section class="contact-me">
+                <div class="container-sm">
+                    <h3 class="text-center">CONTACT ME</h3>
+                    <div class="col-12 position-relative ">
+                        <div class="star-container-dark text-center">
+                           <i class="fa-solid fa-star text-black text-center"></i>
+                        </div>
+                    </div>
+                    <div class="form">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, impedit qui tempore laborum nesciunt cum harum, fuga voluptatibus quos at veniam consequatur vel saepe voluptatum, odio sed deserunt consequuntur vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique qui, libero architecto error cumque eius, incidunt tempora reiciendis, a autem recusandae? Molestias aliquid sunt ipsam? Laudantium iusto expedita repudiandae atque?Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet labore eum nam, tempora ducimus odio reiciendis modi omnis earum voluptates nulla minus dicta doloribus facilis expedita necessitatibus quibusdam rerum cupiditate?
+                    Ad, sequi blanditiis, dolorum sint quibusdam cupiditate incidunt error sunt quos quaerat, fugit dolorem eius! Perferendis molestiae voluptates dolorem dolor beatae iste. Quis doloremque nisi vero odit nemo! Voluptatem, fuga.
+                    Eaque itaque maxime necessitatibus ad cumque reprehenderit hic repellat minus nihil iure. Id temporibus aspernatur voluptatibus consequuntur. Exercitationem magni culpa dignissimos sapiente nisi inventore, doloribus nesciunt corrupti. Quis, molestiae adipisci!
+                    Laboriosam, tenetur mollitia voluptate quos nobis, iusto commodi eos sequi molestiae eum tempora similique et voluptatum ut eaque deleniti tempore pariatur consectetur vitae architecto officia obcaecati ipsam repellat. Repudiandae, illo?
+                    Qui accusamus, aut eum incidunt commodi aperiam laudantium optio nobis tempora blanditiis sapiente minus porro vero minima inventore? Est, dolores? Natus accusantium reiciendis dolorum illo rem sint cumque odio? Voluptatem!
+                    Cumque quas minima, nisi illum autem modi ipsa. Quas, perferendis. Velit quis accusamus ipsum dolores suscipit a explicabo aspernatur laborum ducimus inventore, laboriosam incidunt cumque totam nobis porro placeat rem?</div>
+                </div>
+            </section>
+            <!-- /contact-me-section -->
         </Main>
         <!-- /Main -->
         <!-- Footer -->
-        <footer></footer>
+        <footer>
+            <div class="container-sm">
+                <div class="row">
+                    <div class="col bg-primary">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem praesentium quo, exercitationem inventore voluptate veniam. Aliquid error dignissimos, quis eum eos quasi, tempore recusandae, ipsum voluptate est ullam iusto temporibus!
+                    </div>
+                    <div class="col bg-secondary">
+                        <h3 class="text-white">AROUND THE WEB</h3>
+                        <ul class="d-flex">
+                            <li><a href="">link</a></li>
+                            <li><a href="">link</a></li>
+                            <li><a href="">link</a></li>
+                            <li><a href="">link</a></li>
+                        </ul>
+                    </div>
+                    <div class="col bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt suscipit odio ea assumenda modi eaque a, vitae eum mollitia quisquam repellendus, non quod culpa expedita corporis sapiente accusantium est et.</div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat accusamus nostrum natus voluptatibus fuga dolores expedita iste in iusto voluptas repellat harum, ipsa libero nam maiores nulla quos quia blanditiis!</p>
+            </div>
+        </footer>
         <!-- /Footer -->
     <!-- </div> -->
     
