--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                 </div>
                 <div class="container-sm container-md">
                     <div class="row row-cols-1 row-cols-md-2">
-                        <div class="col"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi reprehenderit quisquam dolores maiores repudiandae, ad, aut officiis esse dignissimos ut nihil cumque sit sed voluptatem deleniti, culpa rerum voluptatum minus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis et accusantium alias ab consequuntur, asperiores est laudantium, aliquid sunt, eum eaque saepe? Ut corrupti fugit unde placeat distinctio qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam veniam aspernatur, enim excepturi pariatur architecto eveniet odit error facilis obcaecati cupiditate quas aliquid, doloremque tempore doloribus minus! Expedita, tempore perferendis!</div>
+                        <div class="col">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS styleshhets for easy customitazon.</p>
+                        </div>
                         <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis et accusantium alias ab consequuntur, asperiores est laudantium, aliquid sunt, eum eaque saepe? Ut corrupti fugit unde placeat distinctio qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quod, sit modi odit dolor doloribus, ad autem accusantium assumenda totam cum ducimus quos quae minima sed velit. Cumque, id dolorem? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro mollitia sed perspiciatis maiores, autem similique nam ratione deleniti veritatis molestias officia, repudiandae, perferendis alias ad neque reprehenderit aperiam non nemo. </div>
                     </div>
                 </div>
