--- a/index.html
+++ b/index.html
@@ -111,30 +111,32 @@
                 </div>
             </section>
         <!-- /Cards-section -->
-            <section class="about m-3">
-                <h3 class="text-white text-center">ABOUT</h3>
+            <section class="about m-3 p-4 text-white">
+                <h3 class="text-center">ABOUT</h3>
                 <div class="col-12 position-relative ">
                     <div class="star-container text-center">
-                       <i class="fa-solid fa-star text-white text-center"></i>
+                       <i class="fa-solid fa-star text-white"></i>
                     </div>
                 </div>
-                <div class="container-sm container-md">
-                    <div class="row row-cols-1 row-cols-md-2">
+                <div class="ms_small-container container-sm container-md">
+                    <div class=" row row-cols-1 row-cols-md-2 mt-2">
                         <div class="col">
                             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS styleshhets for easy customitazon.</p>
                         </div>
-                        <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis et accusantium alias ab consequuntur, asperiores est laudantium, aliquid sunt, eum eaque saepe? Ut corrupti fugit unde placeat distinctio qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quod, sit modi odit dolor doloribus, ad autem accusantium assumenda totam cum ducimus quos quae minima sed velit. Cumque, id dolorem? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro mollitia sed perspiciatis maiores, autem similique nam ratione deleniti veritatis molestias officia, repudiandae, perferendis alias ad neque reprehenderit aperiam non nemo. </div>
+                        <div class="col">
+                            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                        </div>
                     </div>
                 </div>
-                <div class="button m-4 text-center">
+                <div class="button m-3 text-center">
                     <a class="p-2 border border-white rounded" href="">Download</a>
                 </div>
             </section>
             <!-- /Cards-section -->
 
             <!-- Contact-me-section -->
-            <section class="contact-me">
-                <div class="container-sm">
+            <section class="contact-me bg-light">
+                <div class=" ms_small-container container-sm">
                     <h3 class="text-center">CONTACT ME</h3>
                     <div class="col-12 position-relative ">
                         <div class="star-container-dark text-center">
@@ -154,25 +156,39 @@
         <!-- /Main -->
         <!-- Footer -->
         <footer>
-            <div class="container-sm">
-                <div class="row">
-                    <div class="col bg-primary">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem praesentium quo, exercitationem inventore voluptate veniam. Aliquid error dignissimos, quis eum eos quasi, tempore recusandae, ipsum voluptate est ullam iusto temporibus!
+            <div class="container-fluid footer_top">
+                <div class="row row-cols-1 row-cols-md-3 text-center">
+                    <div class="col ">
+                       <h2>LOCATION</h2>
+                       <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="col bg-secondary">
-                        <h3 class="text-white">AROUND THE WEB</h3>
-                        <ul class="d-flex">
-                            <li><a href="">link</a></li>
-                            <li><a href="">link</a></li>
-                            <li><a href="">link</a></li>
-                            <li><a href="">link</a></li>
+
+                    <div class="col m-4">
+                        <h3>AROUND THE WEB</h3>
+                        <ul class="d-flex list-unstyled justify-content-center">
+                            <li>
+                                <a href=""><i class="fa-brands fa-facebook-f fa-2x"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fa-brands fa-google-plus-g fa-2x"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fa-brands fa-linkedin-in fa-2x"></i></a>
+                            </li>
                         </ul>
                     </div>
-                    <div class="col bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt suscipit odio ea assumenda modi eaque a, vitae eum mollitia quisquam repellendus, non quod culpa expedita corporis sapiente accusantium est et.</div>
+
+                    <div class="col">
+                        <H3>ABOUT FREELANCER</H3>
+                        <P class="mx-4">Freelance is a free to use, open source Bootstrap theme created by <span class="ms_color">Start Bootstrap</span></P>
+                    </div>
                 </div>
             </div>
-            <div class="copyright">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat accusamus nostrum natus voluptatibus fuga dolores expedita iste in iusto voluptas repellat harum, ipsa libero nam maiores nulla quos quia blanditiis!</p>
+            <div class="copyright text-center text-white p-3">
+                <p class="fs-6">Copyright <span><i class="fa-regular fa-copyright"></i></span> Your Website 2019</p>
             </div>
         </footer>
         <!-- /Footer -->
