--- a/index.html
+++ b/index.html
@@ -51,11 +51,6 @@
 
                     <div class="col-12 text-center text-white mt-1">
                         <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
-                        <!-- <ul class="row list-unstyled justify-content-center">
-                            <li class="col-3 text-white">GRAPHIC ARTIST</li>
-                            <li class="col-3 text-white">-WEB DESIGNER-</li>
-                            <li class="col-3 text-white">ILLUSTRATOR</li>
-                        </ul> -->
                     </div>
                 </div>
 
@@ -156,27 +151,27 @@
         <!-- /Main -->
         <!-- Footer -->
         <footer>
-            <div class="container-fluid footer_top">
+            <div class="container-fluid footer_top p-5">
                 <div class="row row-cols-1 row-cols-md-3 text-center">
-                    <div class="col ">
+                    <div class="col">
                        <h2>LOCATION</h2>
                        <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
 
-                    <div class="col m-4">
+                    <div class="col">
                         <h3>AROUND THE WEB</h3>
                         <ul class="d-flex list-unstyled justify-content-center">
                             <li>
-                                <a href=""><i class="fa-brands fa-facebook-f fa-2x"></i></a>
+                                <a class="m-0" href=""><i class="fa-brands fa-facebook-f"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-google-plus-g fa-2x"></i></a>
+                                <a class="m-0" href=""><i class="fa-brands fa-google-plus-g"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                                <a class="m-0" href=""><i class="fa-brands fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href=""><i class="fa-brands fa-linkedin-in fa-2x"></i></a>
+                                <a class="m-0" href=""><i class="fa-brands fa-linkedin-in"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -187,9 +182,14 @@
                     </div>
                 </div>
             </div>
-            <div class="copyright text-center text-white p-3">
+            <!-- /footer_top -->
+
+            <!-- Footer_bottom -->
+            <div class="copyright text-center text-white p-4">
                 <p class="fs-6">Copyright <span><i class="fa-regular fa-copyright"></i></span> Your Website 2019</p>
             </div>
+            <!-- /Footer_bottom -->
+
         </footer>
         <!-- /Footer -->
     <!-- </div> -->
