aggiunto display block al nav dell'header

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="text-white px-2">
                 <a class="" href="">START BOOTSTRAP</a>
             </div>
-            <div class="dsplay-none">
+            <div class="d-none d-md-block">
                 <ul class="d-flex justify-content-between align-items-center list-unstyled">
                     <li><a href="">PORTFOLIO</a></li>
                     <li><a href="">ABOUT </a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-            <div class="hamburger-menu m-3 px-2">
+            <div class="hamburger-menu m-3 px-2 d-md-none">
                 <i class="fa-solid fa-bars text-white"></i>
             </div>
         </header>
@@ -138,12 +138,7 @@
                            <i class="fa-solid fa-star text-black text-center"></i>
                         </div>
                     </div>
-                    <div class="form">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, impedit qui tempore laborum nesciunt cum harum, fuga voluptatibus quos at veniam consequatur vel saepe voluptatum, odio sed deserunt consequuntur vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique qui, libero architecto error cumque eius, incidunt tempora reiciendis, a autem recusandae? Molestias aliquid sunt ipsam? Laudantium iusto expedita repudiandae atque?Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet labore eum nam, tempora ducimus odio reiciendis modi omnis earum voluptates nulla minus dicta doloribus facilis expedita necessitatibus quibusdam rerum cupiditate?
-                    Ad, sequi blanditiis, dolorum sint quibusdam cupiditate incidunt error sunt quos quaerat, fugit dolorem eius! Perferendis molestiae voluptates dolorem dolor beatae iste. Quis doloremque nisi vero odit nemo! Voluptatem, fuga.
-                    Eaque itaque maxime necessitatibus ad cumque reprehenderit hic repellat minus nihil iure. Id temporibus aspernatur voluptatibus consequuntur. Exercitationem magni culpa dignissimos sapiente nisi inventore, doloribus nesciunt corrupti. Quis, molestiae adipisci!
-                    Laboriosam, tenetur mollitia voluptate quos nobis, iusto commodi eos sequi molestiae eum tempora similique et voluptatum ut eaque deleniti tempore pariatur consectetur vitae architecto officia obcaecati ipsam repellat. Repudiandae, illo?
-                    Qui accusamus, aut eum incidunt commodi aperiam laudantium optio nobis tempora blanditiis sapiente minus porro vero minima inventore? Est, dolores? Natus accusantium reiciendis dolorum illo rem sint cumque odio? Voluptatem!
-                    Cumque quas minima, nisi illum autem modi ipsa. Quas, perferendis. Velit quis accusamus ipsum dolores suscipit a explicabo aspernatur laborum ducimus inventore, laboriosam incidunt cumque totam nobis porro placeat rem?</div>
+                    <div class="form"></div>
                 </div>
             </section>
             <!-- /contact-me-section -->
