--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 
                             <div class="mb-3">
                               <label for="phone-number" class="form-label mb-0">Phone Number</label>
-                              <input type="number" class="form-control border border-top-0 border-left-0 border-right-0" id="phone-number">
+                              <input type="tel" class="form-control border border-top-0 border-left-0 border-right-0" id="phone-number">
                             </div>
                 
                             <div class="mb-3">
